@@ -4,3 +4,4 @@
 version.h
 tags
 cscope.out
+potfit_*
